--- a/Project3/src/main/webapp/Sample.course.html
+++ b/Project3/src/main/webapp/Sample.course.html
@@ -9,7 +9,7 @@
 <body>
     <table border="10px" cellspacing="10px" cellpadding="10px">
         <tr>
-            <th> Course Name</th>
+            <th> Course Name1</th>
             <th> Course Skills</th>
             <th> Trainer Name</th>
             <th> Course Duration</th>
