--- a/Project4/src/main/webapp/Index_Sample_Form.html
+++ b/Project4/src/main/webapp/Index_Sample_Form.html
@@ -11,10 +11,10 @@
             <label for="uid"> User Name</label>
             <input type="text" id="uid">
             <br><br>
-            <label for="pword"> Password</label>
+            <label for="pword"> Password </label>
             <input type="text" id="pword">
             <br><br>
-            <label for="gender111"> Gender</label>
+            <label for="gender"> Gender </label>
             <input type="radio" name="gender"> Male
             <input type="radio" name="gender"> Female
             <br><br>
